[gd_scene load_steps=11 format=3 uid="uid://ce06p2pe2ubyh"]

[ext_resource type="Script" uid="uid://b6m0n4cavmnbq" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Script" uid="uid://do6x32nsor0xx" path="res://gun.gd" id="2_hqtel"]
[ext_resource type="Script" uid="uid://dl7b3jsahmywd" path="res://cooldown.gd" id="3_sweqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feb5d"]
size = Vector2(32, 19)

[sub_resource type="Gradient" id="Gradient_fc0e3"]
offsets = PackedFloat32Array(0.878261, 0.930435, 1)
colors = PackedColorArray(0.329106, 0.527741, 0.873161, 1, 0.0294882, 0.266672, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7jktm"]
gradient = SubResource("Gradient_fc0e3")
width = 70
height = 70
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
bg_color = Color(0, 0, 0, 0.396078)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(0.329106, 0.527741, 0.873161, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hqtel"]
radius = 32.0156

[node name="Player" type="CharacterBody2D"]
top_level = true
collision_mask = 3
slide_on_ceiling = false
platform_floor_layers = 0
script = ExtResource("1_i3pqv")

[node name="Gun" type="Area2D" parent="."]
script = ExtResource("2_hqtel")

[node name="ColorRect" type="ColorRect" parent="Gun"]
offset_left = 27.0
offset_top = -14.0
offset_right = 59.0
offset_bottom = 13.0
color = Color(0.526423, 0.526423, 0.526423, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gun"]
shape = SubResource("RectangleShape2D_feb5d")

[node name="ShootingPoint" type="Marker2D" parent="Gun"]
unique_name_in_owner = true
position = Vector2(53, 0)

[node name="Cooldown" type="Timer" parent="Gun"]
wait_time = 0.8
autostart = true
script = ExtResource("3_sweqy")

[node name="Body" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_7jktm")

[node name="Camera" type="Camera2D" parent="."]

[node name="PlayerHealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -47.0
offset_top = -59.0
offset_right = 47.0
offset_bottom = -40.0
theme_override_styles/background = SubResource("StyleBoxFlat_i3pqv")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqtel")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="PlayerHealthLabel" type="Label" parent="PlayerHealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -11.5
offset_right = 14.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 0
text = "20/20"

[node name="PlayerHitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource("CircleShape2D_i3pqv")
debug_color = Color(1, 0.00392157, 0.0705882, 0.411765)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hqtel")

[connection signal="timeout" from="Gun/Cooldown" to="Gun" method="_on_timer_timeout"]
